# SCARP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
cmake/: CMakeLists.txt.in  SCARP-config.cmake  scarp-config.cmake
dataset/tests/adaptive/: results.csv  results_vc.csv
dataset/tests/l1reg/512_triple/: results_1.0.csv  results_1.5.csv  results_2.0.csv
dataset/tests/noreg/512_triple/: results_1.0.csv  results_1.5.csv  results_2.0.csv
src/: CMakeLists.txt
src/main/: CMakeLists.txt  batch_solver.cc  bounded_label_set.hh  control_reader.cc  control_reader.hh  control_writer.cc  control_writer.hh  controls.cc  controls.hh  cost_function.cc  cost_function.hh  cost_printer.cc  defs.hh.in  dwt_solver.cc  handle.hh  instance.hh  instance_reader.cc  instance_reader.hh  label.hh  log.cc  log.hh  matrix.hh  mesh.hh  parameters.cc  parameters.hh  scarp_solver.cc  solution_tester.cc  sur_solver.cc  util.hh
src/main/dwt/: dwt_label.hh  dwt_program.cc  dwt_program.hh
src/main/scarp/: adaptive_program.hh  base_program.hh  scarp_label.hh  scarp_program.cc  scarp_program.hh  uniform_program.cc  uniform_program.hh
src/main/sur/: sur.cc  sur.hh
src/perf/: CMakeLists.txt  benchmark.cc  benchmark.hh  scarp_benchmark.cc  scarp_zero_benchmark.cc  sur_benchmark.cc  timer.hh
src/scarp/: CMakeLists.txt  ansi_color.cc  ansi_color.hh  bounded_label_set.hh  bounds.cc  bounds.hh  cmp.cc  cmp.hh  control_writer.cc  control_writer.hh  controls.cc  controls.hh  cost_function.cc  cost_function.hh  cost_printer.cc  defs.hh.in  deviation_bound.cc  deviation_bound.hh  dwt_solver.cc  dwt_solver_main.cc  error.hh  handle.hh  instance.hh  instance_reader.cc  instance_reader.hh  label.hh  log.cc  log.hh  matrix.hh  mesh.cc  mesh.hh  parameters.cc  parameters.hh  scarp.hh  scarp_solver.cc  scarp_solver_main.cc  solution_tester.cc  sur_solver.cc  sur_solver_main.cc  util.cc  (+1 more)
src/scarp/dwt/: dwt_label.hh  dwt_program.cc  dwt_program.hh
src/scarp/scarp/: scarp_label.cc  scarp_label.hh  scarp_program.cc  scarp_program.hh
src/scarp/sur/: sur.cc  sur.hh
src/test/: CMakeLists.txt  csv_reader.cc  csv_reader.hh  test_fixture.cc  test_fixture.hh
src/test/dwt/: dwt_program_test.cc
src/test/scarp/: .#scarp_program_test.cc  adaptive_mesh_test.cc  adaptive_mesh_vc_test.cc  adaptive_program_test.cc  adaptive_program_test.hh  scarp_program_test.cc  scarp_program_test.hh  uniform_mesh_test.cc  uniform_program_test.cc
